--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -30,15 +30,15 @@ surf = "2"
 serde = { version = "1.0", features = ["derive"] }
 async-sse = "5"
 curv-kzen = { version = "0.9", default-features = false }
-sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
+sp-keyring = "6.0.0"
 subxt = { git = "https://github.com/paritytech/subxt.git" }
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
-parity-scale-codec-derive = "2.3.1"
+codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
+parity-scale-codec-derive = "3.0.0"
 common = { path = "../../crypto/common", default-features = false }
 
 [dev-dependencies]
 project-root = "0.2.2"
-sp-core = { version = "4.1.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-core = { version = "6.0.0", default-features = false  }
 env_logger = "0.9.0"
 log = "0.4.14"
 which = "4.0.2"
@@ -46,7 +46,7 @@ which = "4.0.2"
 [dependencies.scale-info]
 default-features = false
 features = ['derive']
-version = '1.0'
+version = '2.0.1'
 
 [dependencies.paillier]
 version = "0.4.2"
