--- a/pallets/constraints/Cargo.toml
+++ b/pallets/constraints/Cargo.toml
@@ -17,25 +17,14 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
-version = '4.1.0-dev'
+version = '6.0.0'
 
-[dev-dependencies.sp-io]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
-
-[dev-dependencies.sp-runtime]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
 
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '2.0.0'
+version = '3.0.0'
 
 [dependencies.frame-benchmarking]
 default-features = false
@@ -60,12 +49,12 @@ version = '4.0.0-dev'
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-relayer = { version = "3.0.0", default-features = false, path = "../relayer" }
 
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 log = { version = "0.4.0", default-features = false }
 sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-io = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
+sp-io = { version = "6.0.0", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
 lite-json = { version = "0.1", default-features = false }
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [features]
 default = ['std']
