--- a/subxttest/Cargo.toml
+++ b/subxttest/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 
 [dependencies]
 subxt = { git = "https://github.com/paritytech/subxt.git" }
-sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
+sp-keyring = "6.0.0"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
