--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -21,6 +21,7 @@ futures = "0.3"
 tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
 serde = { version = "1.0", features = ["derive"] }
 surf = "2"
+sp-keyring = "6.0.0"
 
 [dev-dependencies]
 sp-keyring = "6.0.0"
