add threshold key check to confirm done

--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -65,6 +65,7 @@ sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", 
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 log = { version = "0.4.0", default-features = false }
 pallet-slashing = { version = "3.0.0", default-features = false, path = "../slashing" }
+pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
 # protocol = { path = "../../crypto/protocol", default-features = false }
 common = { path = "../../crypto/common", default-features = false }
 helpers = { path = "../helpers", default-features = false }
@@ -80,6 +81,7 @@ std = [
     'frame-system/std',
     'frame-benchmarking/std',
 	'pallet-slashing/std',
+	'pallet-staking-extension/std',
 	'helpers/std',
 	"sp-std/std",
 	"sp-runtime/std",
