--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -66,9 +66,20 @@ pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'ht
 log = { version = "0.4.0", default-features = false }
 pallet-slashing = { version = "3.0.0", default-features = false, path = "../slashing" }
 pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
-# protocol = { path = "../../crypto/protocol", default-features = false }
 common = { path = "../../crypto/common", default-features = false }
 helpers = { path = "../helpers", default-features = false }
+
+[dev-dependencies]
+pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+
 
 [features]
 default = ['std']
@@ -80,10 +91,12 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
+	'pallet-balances/std',
 	'pallet-slashing/std',
 	'pallet-staking-extension/std',
 	'helpers/std',
 	"sp-std/std",
 	"sp-runtime/std",
+	"sp-npos-elections/std",
 ]
 try-runtime = ['frame-support/try-runtime']
