--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -22,6 +22,7 @@ tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util
 serde = { version = "1.0", features = ["derive"] }
 surf = "2"
 sp-keyring = "6.0.0"
+sp-core = "6.0.0"
 
 [dev-dependencies]
 sp-keyring = "6.0.0"
@@ -33,4 +34,6 @@ which = "4.0.2"
 
 [features]
 default = ['std']
-std = []
+std = [
+	"sp-core/std"
+]
