--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -24,6 +24,7 @@ surf = "2"
 sp-keyring = "6.0.0"
 sp-core = "6.0.0"
 envy = "0.4"
+bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1"}
 
 [dev-dependencies]
 sp-keyring = "6.0.0"
