--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -28,12 +28,7 @@ bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1
 constraints = { path = "../constraints"}
 
 [dev-dependencies]
-sp-keyring = "6.0.0"
-project-root = "0.2.2"
-sp-core = { version = "6.0.0", default-features = false  }
-env_logger = "0.9.0"
-log = "0.4.14"
-which = "4.0.2"
+testing-utils = { path = "../testing-utils"}
 
 [features]
 default = ['std']
