--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -26,9 +26,12 @@ sp-core = "6.0.0"
 envy = "0.4"
 bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1"}
 constraints = { path = "../constraints"}
+tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
 
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
+project-root = "0.2.2"
+serial_test = "0.6.0"
 
 [features]
 default = ['std']
