--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -29,6 +29,7 @@ constraints = { path = "../constraints"}
 tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
 project-root = "0.2.2"
 client-grpc = { path = "../grpc-client-server/client", default-features = false }
+local-ip = "0.1"
 
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
