--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]}
-reqwest = { version = "0.9", default-features = false }
+reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 parity-scale-codec = "3.0.0"
@@ -28,6 +28,7 @@ bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1
 constraints = { path = "../constraints"}
 tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
 project-root = "0.2.2"
+local-ip = "0.1"
 
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
