--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -11,10 +11,10 @@ reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
 parity-scale-codec = "3.0.0"
-common = { path = "../../crypto/common", default-features = false }
-protocol = { path = "../protocol", default-features = false }
+common = { path = "../common", default-features = false }
+# protocol = { path = "../protocol", default-features = false }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
-multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
+# multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 curv-kzen = { version = "0.9", default-features = false }
 anyhow = "1.0.53"
 thiserror = "1.0.31"
@@ -30,6 +30,9 @@ constraints = { path = "../constraints"}
 tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
 project-root = "0.2.2"
 local-ip = "0.1"
+
+# logging
+log = "0.4.17"
 
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
