--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -15,7 +15,7 @@ common = { path = "../common", default-features = false }
 # protocol = { path = "../protocol", default-features = false }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
 # multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
-curv-kzen = { version = "0.9", default-features = false }
+# curv-kzen = { version = "0.9", default-features = false }
 anyhow = "1.0.53"
 thiserror = "1.0.31"
 futures = "0.3"
