--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,24 +22,24 @@ jobs:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
       - run: pushd node && cargo check --features=runtime-benchmarks --release
-  crypto:
-    name: Crypto
+  crypto-keygen:
+    name: Keygen
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: cd crypto/protocol && cargo check --release
+      - run: cd crypto/centralized-keygen && cargo check 
   crypto-signing-client:
     name: Signing
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: cd crypto/signing-client && cargo check --release
+      - run: cd crypto/signing-client && cargo check
   crypto-common:
     name: Common
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: cd crypto/common && cargo check --release
+      - run: cd crypto/common && cargo check
