--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: pushd node SKIP_WASM_BUILD=1 cargo clippy
+      - run: pushd node && SKIP_WASM_BUILD=1 cargo clippy
   crypto-keygen:
     name: Lint Centralized Keygen
     runs-on: ubuntu-20.04
