Clean up and DRY up config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,13 @@
 version: 2.1
 
+# UBUNTU_2004_STANDARD_IMAGE and CIRCLECI_2XLARGE_RESOURCE_CLASS are defined
+# in https://app.circleci.com/settings/project/github/Entropyxyz/entropy-core/environment-variables
+
 commands:
+  install-dependencies-and-checkout:
+    steps:
+      - install-dependencies
+      - checkout
   increase-swap:
     steps:
       - run: sudo swapoff -a
@@ -22,77 +29,71 @@ commands:
 jobs:
   node-test:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
       - increase-swap
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: pushd node && cargo build --release && cargo test
   node-benchmark:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: pushd node && cargo check --features=runtime-benchmarks --release
+      
   crypto-protocol:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/protocol && cargo check
   crypto-signing-client:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/signing-client && cargo check
   crypto-common:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/common && cargo check
+   
   linting-node-core:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: SKIP_WASM_BUILD=1 cargo clippy
   linting-crypto-protocol:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/protocol && cargo clippy
   linting-crypto-signing-client:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/signing-client && cargo clippy
   linting-crypto-common:
     machine:
-      image: "ubuntu-2004:202201-02"
-      resource_class: "2xlarge"
+      image: $UBUNTU_2004_STANDARD_IMAGE
+      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
     steps:
-      - install-dependencies
-      - checkout
+      - install-dependencies-and-checkout
       - run: cd crypto/common && cargo clippy
+
 workflows:
   entropy-node:
     jobs:
