--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-# UBUNTU_2004_STANDARD_IMAGE and CIRCLECI_2XLARGE_RESOURCE_CLASS are defined
-# in https://app.circleci.com/settings/project/github/Entropyxyz/entropy-core/environment-variables
-
 commands:
   install-dependencies-and-checkout:
     steps:
@@ -29,16 +26,16 @@ commands:
 jobs:
   node-test:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - increase-swap
       - install-dependencies-and-checkout
       - run: pushd node && cargo build --release && cargo test
   node-benchmark:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: pushd node && cargo check --features=runtime-benchmarks --release
@@ -46,50 +43,50 @@ jobs:
   crypto-protocol:
     machine:
       image: "ubuntu-2004:202201-02"
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/protocol && cargo check
   crypto-signing-client:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/signing-client && cargo check
   crypto-common:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/common && cargo check
    
   linting-node-core:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: SKIP_WASM_BUILD=1 cargo clippy
   linting-crypto-protocol:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/protocol && cargo clippy
   linting-crypto-signing-client:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/signing-client && cargo clippy
   linting-crypto-common:
     machine:
-      image: $UBUNTU_2004_STANDARD_IMAGE
-      resource_class: $CIRCLECI_2XLARGE_RESOURCE_CLASS
+      image: "ubuntu-2004:202201-02"
+      resource_class: "2xlarge"
     steps:
       - install-dependencies-and-checkout
       - run: cd crypto/common && cargo clippy
