constraint weight integration

--- a/pallets/constraints/Cargo.toml
+++ b/pallets/constraints/Cargo.toml
@@ -55,6 +55,7 @@ sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://g
 sp-io = { version = "6.0.0", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
 lite-json = { version = "0.1", default-features = false }
 sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 
 [features]
 default = ['std']
