--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -27,7 +27,10 @@ sp-core = "6.0.0"
 envy = "0.4"
 bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1"}
 constraints = { path = "../constraints"}
+
+tofn = { git = "https://github.com/Entropyxyz/tofn", branch = "main"}
 tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
+
 project-root = "0.2.2"
 local-ip = "0.1"
 
