--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -39,6 +39,9 @@ log = "0.4.17"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
+# Convenience 
+tylift = "0.3.5"
+
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
 serial_test = "0.6.0"
