--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -30,6 +30,16 @@ constraints = { path = "../constraints"}
 tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
 project-root = "0.2.2"
 local-ip = "0.1"
+sled = "0.34.7"
+chacha20poly1305 = { version = "0.9", features = ["alloc"], default-features = false }
+rand = {version = "0.8", default-features = false }
+tofn = { git = "https://github.com/axelarnetwork/tofn", branch = "main"}
+tracing = {version = "0.1", default-features = false}
+zeroize = { version = "1.4", features = ["zeroize_derive"], default-features = false}
+rpassword = { version = "5.0", default-features = false }
+scrypt = { version = "0.8", default-features = false, features = ["std"] }
+dirs = { version = "4.0", default-features = false }
+clap = {version = "3.0", default-features = false, features = ["std", "cargo", "env"]}
 
 # logging
 log = "0.4.17"
@@ -37,6 +47,7 @@ log = "0.4.17"
 [dev-dependencies]
 testing-utils = { path = "../testing-utils"}
 serial_test = "0.6.0"
+testdir = {version = "0.4", default-features = false}
 
 [features]
 default = ['std']
