--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -9,19 +9,16 @@ edition = "2021"
 rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]}
 reqwest = { version = "0.11", features = ["json", "stream"] }
 serde_json = "1.0"
-uuid = { version = "0.8", features = ["v4"] }
+# uuid = { version = "0.8", features = ["v4"] }
 parity-scale-codec = "3.0.0"
 common = { path = "../common", default-features = false }
-# protocol = { path = "../protocol", default-features = false }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
-# multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
-# curv-kzen = { version = "0.9", default-features = false }
 anyhow = "1.0.53"
 thiserror = "1.0.31"
 futures = "0.3"
 tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
 serde = { version = "1.0", features = ["derive"] }
-surf = "2"
+# surf = "2"
 sp-keyring = "6.0.0"
 sp-core = "6.0.0"
 envy = "0.4"
