--- a/crypto/kvdb/Cargo.toml
+++ b/crypto/kvdb/Cargo.toml
@@ -24,8 +24,9 @@ chacha20poly1305 = { version = "0.9", features = [
   "alloc",
 ], default-features = false }
 rand = { version = "0.8", default-features = false }
-tokio = { version = "1.16", features = [
+tokio = { version = "1.16", features =  [
   "macros",
+  "sync",
   "fs",
   "rt-multi-thread",
   "io-util",
