--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -1,52 +1,54 @@
 [package]
-name = "signing-client"
-version = "0.1.0"
-edition = "2021"
+name   ="signing-client"
+version="0.1.0"
+edition="2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]}
-reqwest = { version = "0.11", features = ["json", "stream"] }
-serde_json = "1.0"
+# Common
+serde     ={ version="1.0", features=["derive"] }
+serde_json="1.0"
+anyhow    ="1.0.53"
+thiserror ="1.0.31"
+
+# Async
+futures="0.3"
+tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
+
+# HTTP
+rocket ={ version="0.5.0-rc.1", default-features=false, features=["json"] }
+reqwest={ version="0.11", features=["json", "stream"] }
+
+# Substrate
+parity-scale-codec="3.0.0"
+subxt             ={ git="https://github.com/paritytech/subxt.git" }
+sp-keyring        ="6.0.0"
+sp-core           ="6.0.0"
+
+# Entropy
+common     ={ path="../common", default-features=false }
+kvdb       ={ path="../kvdb", default-features=false }
+constraints={ path="../constraints" }
+
+# Logging
+log               ="0.4.17"                                          # todo: remove, overlaps tracing
+tracing           ="0.1"
+tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
+
+# Misc
 # uuid = { version = "0.8", features = ["v4"] }
-parity-scale-codec = "3.0.0"
-common = { path = "../common", default-features = false }
-kvdb = { path = "../kvdb", default-features = false }
-
-# protocol = { path = "../protocol", default-features = false }
-subxt = { git = "https://github.com/paritytech/subxt.git" }
-anyhow = "1.0.53"
-thiserror = "1.0.31"
-futures = "0.3"
-tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
-serde = { version = "1.0", features = ["derive"] }
-# surf = "2"
-sp-keyring = "6.0.0"
-sp-core = "6.0.0"
-envy = "0.4"
-bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1"}
-tofn = { git = "https://github.com/Entropyxyz/tofn", branch = "main"}
-constraints = { path = "../constraints"}
-project-root = "0.2.2"
-local-ip = "0.1"
-
-# logging
-log = "0.4.17"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
-
-# Convenience 
-tylift = "0.3.5"
-merge-streams = "0.1.2"
-# futures-lite = "1.12.0"
+tylift      ="0.3.5"
+envy        ="0.4"
+bip39       ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
+tofn        ={ git="https://github.com/Entropyxyz/tofn", branch="main" }
+project-root="0.2.2"
+local-ip    ="0.1"
 
 [dev-dependencies]
-testing-utils = { path = "../testing-utils"}
-serial_test = "0.6.0"
+testing-utils={ path="../testing-utils" }
+serial_test  ="0.6.0"
 
 [features]
-default = ['std']
-std = [
-	"sp-core/std"
-]
+default=['std']
+std    =["sp-core/std"]
